# streamlit_model

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: actions.yml
model/: __init__.py  initial_model.py  multiplier.py
src/: app.py
tests/: initial_test.py
tests/data/: example_data.csv
