[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "MemoOlv"
author-email = "guolgue@gmail.com"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"
module = "model"
requires = [
    "matplotlib",
    "pandas",
    "streamlit"
]
requires-python=">=3.9"
